clusters/homelab/bootstrap/argocd-simple/tls/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-server
  namespace: argocd
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
    cert-manager.io/cluster-issuer: "letsencrypt-dns"
spec:
  tls:
    - hosts: ["argo.support4u.se"]
      secretName: argocd-server-tls
  rules:
    - host: argo.support4u.se
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: argocd-server
                port:
                  number: 80
